@@ -135,7 +135,7 @@ namespace QA40xPlot.ViewModels
 				case "RangeBottom":
 				case "RangeTopdB":
 				case "RangeTop":
-					MyAction?.UpdateGraph(true);
+					MyAction?.UpdateGraph(false, e.PropertyName);
 					break;
 				case "ShowRight":
 				case "ShowLeft":
@@ -270,7 +270,6 @@ namespace QA40xPlot.ViewModels
 		{
 			var frslt = MyAction.PageData.FreqRslt;
 			MyAction?.ActFitToData(this, parameter, ShowLeft ? frslt?.Left : frslt?.Right);
-			MyAction?.UpdateGraph(true);
 		}
 
 		// when the mouse moves in the plotcontrol window it sends a mouseevent to the parent view model (this)
