@@ -160,7 +160,7 @@ namespace QA40xPlot.ViewModels
 				case "GraphEndX":
 				case "RangeBottom":
 				case "RangeTop":
-					MyAction?.UpdateGraph(true);
+					MyAction?.UpdateGraph(false, e.PropertyName);
 					break;
 				case "ShowThickLines":
 				case "ShowMarkers":
@@ -309,7 +309,6 @@ namespace QA40xPlot.ViewModels
 				default:
 					break;
 			}
-			MyAction?.UpdateGraph(true);
 		}
 
 		// when the mouse moves in the plotcontrol window it sends a mouseevent to the parent view model (this)
